@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/attack.c: Fix for bug 2019648: Too high experience gain with draining
+    monsters.  Don't add more exp to monsters than the player lost by draining.
+    Record original exp of player before draining and use that as a check in
+    MIN() statement - because from old code, divisor is twice as much as
+    we remove, very likely the old method will be less than actual lost exp.
+MSW 2009-02-25
+
 server/attack.c: Fix for bug 2021012: Do insane damage in arena - if
     characters are on battleground, do not reduce damage for them
     being friendly.
